feat: add delete device
